Add dummy listplaces handler and test
